fix mod file install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,15 @@ install (TARGETS fortran_unit_test EXPORT FortranUnitTestTargets
   LIBRARY DESTINATION lib
 )
 
-file (GLOB mods "${CMAKE_BINARY_DIR}/*.mod")
-install (FILES ${mods} DESTINATION include/fortran_unit_test)
+foreach (source IN LISTS sources)
+  if (source MATCHES "_mod.F90")
+    get_filename_component (filename ${source} NAME_WE)
+    install (FILES "${CMAKE_BINARY_DIR}/${filename}.mod"
+      CONFIGURATIONS Release
+      DESTINATION include/fortran_datetime
+    )
+  endif ()
+endforeach ()
 
 include (CMakePackageConfigHelpers)
 write_basic_package_version_file (
